combination java solution